adding helm charts

--- a/k8s/templates/service.yaml
+++ b/k8s/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: webapp
 spec:
-  type: {{ .Values.service.type }}
+  type: Nodeport
   ports:
     - port: 80
       targetPort: http
