--- a/k8s/templates/service.yaml
+++ b/k8s/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ Values.SERVICE_NAME }}
+  name: {{ .Values.SERVICE_NAME }}
   labels:
     app: webapp
 spec:
